SentryNative/SentryNative.cs

using System;
using System.Runtime.InteropServices;

namespace SentryNative
{
    public enum sentry_value_type_t
    {
        SENTRY_VALUE_TYPE_NULL,
        SENTRY_VALUE_TYPE_BOOL,
        SENTRY_VALUE_TYPE_INT32,
        SENTRY_VALUE_TYPE_DOUBLE,
        SENTRY_VALUE_TYPE_STRING,
        SENTRY_VALUE_TYPE_LIST,
        SENTRY_VALUE_TYPE_OBJECT,
    }

    [StructLayout(LayoutKind.Explicit)]
    public partial struct sentry_value_u
    {
        [FieldOffset(0)]
        [NativeTypeName("uint64_t")]
        public ulong _bits;

        [FieldOffset(0)]
        public double _double;
    }

    public enum sentry_level_e
    {
        SENTRY_LEVEL_DEBUG = -1,
        SENTRY_LEVEL_INFO = 0,
        SENTRY_LEVEL_WARNING = 1,
        SENTRY_LEVEL_ERROR = 2,
        SENTRY_LEVEL_FATAL = 3,
    }

    public partial struct sentry_ucontext_s
    {
        //[NativeTypeName("EXCEPTION_POINTERS")]
        //public _EXCEPTION_POINTERS exception_ptrs;
    }

    public unsafe partial struct sentry_uuid_s
    {
        [NativeTypeName("char [16]")]
        public fixed sbyte bytes[16];
    }

    public partial struct sentry_envelope_s
    {
    }

    public partial struct sentry_options_s
    {
    }

    public partial struct sentry_transport_s
    {
    }

    public enum sentry_user_consent_t
    {
        SENTRY_USER_CONSENT_UNKNOWN = -1,
        SENTRY_USER_CONSENT_GIVEN = 1,
        SENTRY_USER_CONSENT_REVOKED = 0,
    }

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    [return: NativeTypeName("sentry_value_t")]
    public unsafe delegate sentry_value_u sentry_event_function_t([NativeTypeName("sentry_value_t")] sentry_value_u @event, [NativeTypeName("void *")] void* hint, [NativeTypeName("void *")] void* closure);

    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public unsafe delegate void sentry_logger_function_t([NativeTypeName("sentry_level_t")] sentry_level_e level, [NativeTypeName("const char *")] sbyte* message, [NativeTypeName("va_list")] sbyte* args, [NativeTypeName("void *")] void* userdata);

    public static unsafe partial class Methods
    {
        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_malloc", ExactSpelling = true)]
        [return: NativeTypeName("void *")]
        public static extern void* sentry_malloc([NativeTypeName("size_t")] UIntPtr size);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_free", ExactSpelling = true)]
        public static extern void sentry_free([NativeTypeName("void *")] void* ptr);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_value_incref", ExactSpelling = true)]
        public static extern void sentry_value_incref([NativeTypeName("sentry_value_t")] sentry_value_u value);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_value_decref", ExactSpelling = true)]
        public static extern void sentry_value_decref([NativeTypeName("sentry_value_t")] sentry_value_u value);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_value_refcount", ExactSpelling = true)]
        [return: NativeTypeName("size_t")]
        public static extern UIntPtr sentry_value_refcount([NativeTypeName("sentry_value_t")] sentry_value_u value);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_value_freeze", ExactSpelling = true)]
        public static extern void sentry_value_freeze([NativeTypeName("sentry_value_t")] sentry_value_u value);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_value_is_frozen", ExactSpelling = true)]
        public static extern int sentry_value_is_frozen([NativeTypeName("sentry_value_t")] sentry_value_u value);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_value_new_null", ExactSpelling = true)]
        [return: NativeTypeName("sentry_value_t")]
        public static extern sentry_value_u sentry_value_new_null();

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_value_new_int32", ExactSpelling = true)]
        [return: NativeTypeName("sentry_value_t")]
        public static extern sentry_value_u sentry_value_new_int32([NativeTypeName("int32_t")] int value);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_value_new_double", ExactSpelling = true)]
        [return: NativeTypeName("sentry_value_t")]
        public static extern sentry_value_u sentry_value_new_double(double value);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_value_new_bool", ExactSpelling = true)]
        [return: NativeTypeName("sentry_value_t")]
        public static extern sentry_value_u sentry_value_new_bool(int value);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_value_new_string", ExactSpelling = true)]
        [return: NativeTypeName("sentry_value_t")]
        public static extern sentry_value_u sentry_value_new_string([NativeTypeName("const char *")] sbyte* value);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_value_new_list", ExactSpelling = true)]
        [return: NativeTypeName("sentry_value_t")]
        public static extern sentry_value_u sentry_value_new_list();

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_value_new_object", ExactSpelling = true)]
        [return: NativeTypeName("sentry_value_t")]
        public static extern sentry_value_u sentry_value_new_object();

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_value_get_type", ExactSpelling = true)]
        public static extern sentry_value_type_t sentry_value_get_type([NativeTypeName("sentry_value_t")] sentry_value_u value);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_value_set_by_key", ExactSpelling = true)]
        public static extern int sentry_value_set_by_key([NativeTypeName("sentry_value_t")] sentry_value_u value, [NativeTypeName("const char *")] sbyte* k, [NativeTypeName("sentry_value_t")] sentry_value_u v);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_value_remove_by_key", ExactSpelling = true)]
        public static extern int sentry_value_remove_by_key([NativeTypeName("sentry_value_t")] sentry_value_u value, [NativeTypeName("const char *")] sbyte* k);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_value_append", ExactSpelling = true)]
        public static extern int sentry_value_append([NativeTypeName("sentry_value_t")] sentry_value_u value, [NativeTypeName("sentry_value_t")] sentry_value_u v);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_value_set_by_index", ExactSpelling = true)]
        public static extern int sentry_value_set_by_index([NativeTypeName("sentry_value_t")] sentry_value_u value, [NativeTypeName("size_t")] UIntPtr index, [NativeTypeName("sentry_value_t")] sentry_value_u v);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_value_remove_by_index", ExactSpelling = true)]
        public static extern int sentry_value_remove_by_index([NativeTypeName("sentry_value_t")] sentry_value_u value, [NativeTypeName("size_t")] UIntPtr index);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_value_get_by_key", ExactSpelling = true)]
        [return: NativeTypeName("sentry_value_t")]
        public static extern sentry_value_u sentry_value_get_by_key([NativeTypeName("sentry_value_t")] sentry_value_u value, [NativeTypeName("const char *")] sbyte* k);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_value_get_by_key_owned", ExactSpelling = true)]
        [return: NativeTypeName("sentry_value_t")]
        public static extern sentry_value_u sentry_value_get_by_key_owned([NativeTypeName("sentry_value_t")] sentry_value_u value, [NativeTypeName("const char *")] sbyte* k);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_value_get_by_index", ExactSpelling = true)]
        [return: NativeTypeName("sentry_value_t")]
        public static extern sentry_value_u sentry_value_get_by_index([NativeTypeName("sentry_value_t")] sentry_value_u value, [NativeTypeName("size_t")] UIntPtr index);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_value_get_by_index_owned", ExactSpelling = true)]
        [return: NativeTypeName("sentry_value_t")]
        public static extern sentry_value_u sentry_value_get_by_index_owned([NativeTypeName("sentry_value_t")] sentry_value_u value, [NativeTypeName("size_t")] UIntPtr index);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_value_get_length", ExactSpelling = true)]
        [return: NativeTypeName("size_t")]
        public static extern UIntPtr sentry_value_get_length([NativeTypeName("sentry_value_t")] sentry_value_u value);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_value_as_int32", ExactSpelling = true)]
        [return: NativeTypeName("int32_t")]
        public static extern int sentry_value_as_int32([NativeTypeName("sentry_value_t")] sentry_value_u value);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_value_as_double", ExactSpelling = true)]
        public static extern double sentry_value_as_double([NativeTypeName("sentry_value_t")] sentry_value_u value);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_value_as_string", ExactSpelling = true)]
        [return: NativeTypeName("const char *")]
        public static extern sbyte* sentry_value_as_string([NativeTypeName("sentry_value_t")] sentry_value_u value);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_value_is_true", ExactSpelling = true)]
        public static extern int sentry_value_is_true([NativeTypeName("sentry_value_t")] sentry_value_u value);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_value_is_null", ExactSpelling = true)]
        public static extern int sentry_value_is_null([NativeTypeName("sentry_value_t")] sentry_value_u value);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_value_to_json", ExactSpelling = true)]
        [return: NativeTypeName("char *")]
        public static extern sbyte* sentry_value_to_json([NativeTypeName("sentry_value_t")] sentry_value_u value);

        [DllImport("sentryffi", CallingConvention = CallingConvention.Cdecl, EntryPoint = "sentry_value_new_event", ExactSpelling = true)]
        [return: NativeTypeName("sentry_value_t")]
        public static extern sentry_value_u sentry_value_new_event();
